syntax = "proto3";

package pocket;

option go_package = "github.com/pokt-network/pocket/shared/messaging";

message NodeStartedEvent {}

message ConsensusNewHeightEvent {
  uint64 height = 1;
}

message StateMachineTransitionEvent {
  string event = 1;
  string src = 2;
  string dst = 3;
}
